Finished first official version of the posts.

--- a/_config.yml
+++ b/_config.yml
@@ -25,13 +25,14 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 domain: miguelbalmeida.github.io
 url: "https://miguelbalmeida.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
-github_username:  miguelbalmeida
+github_username: miguelbalmeida
+linkedin_username: miguelbalmeida
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+pagination: 10
 
 # Exclude from processing.
 # The following items will not be processed, by default.
