--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Miguel Almeida
 email: miguelbalmeida-remover-esta-parte@remover-isto-tambem-gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Um blogue sobre ciência, dados, e ciência de dados. Aplicados aos mais variados temas.
+  Um blogue onde uso ciência de dados para analisar a cidade de Lisboa.
 baseurl: "" # the subpath of your site, e.g. /blog
 domain: miguelbalmeida.github.io
 url: "https://miguelbalmeida.github.io" # the base hostname & protocol for your site, e.g. http://example.com
