--- a/_config.yml
+++ b/_config.yml
@@ -1,55 +1,19 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you: 
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+# Site Build Settings
 
-title: Miguel Almeida
-email: miguelbalmeida-remover-esta-parte@remover-isto-tambem-gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Um blogue onde uso ciência de dados para analisar a cidade de Lisboa.
-baseurl: "" # the subpath of your site, e.g. /blog
-domain: miguelbalmeida.github.io
-url: "https://miguelbalmeida.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-github_username: miguelbalmeida
-linkedin_username: miguelbalmeida
+# jekyll-paginate configuration
+paginate:            5
 
 # Build settings
-theme: minima
-plugins:
-  - jekyll-feed
-pagination: 10
+markdown:            kramdown
+highlighter:         rouge
+permalink:           /:title
+plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+# Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
+title:		           "Miguel Almeida"
+description:	       "Um blogue de ciência de dados sobre Lisboa"
+author:              "Miguel Almeida"
+
+# RSS 2.0 can be used instead of Atom by uncommenting following two lines
+#feed:
+#  path: rss-feed.xml
