Changed 'written by' back to English

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -28,4 +28,4 @@ sharing_button_prompt: 'Partilhe!'
 
 related_posts: 'Leia a seguir...'
 
-post_date_prefix: 'Escrito em'
+post_date_prefix: 'Written on'
